Message from coordinator added

--- a/index.html
+++ b/index.html
@@ -18,35 +18,46 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.css">
+    <link rel="stylesheet"
+        href="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.css">
     <link rel="stylesheet" href="assets/css/styles.min.css">
 </head>
 
 <body>
     <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar">
-        <div class="container"><a class="navbar-brand logo" id="dtu_logo" href="#"></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse"
-                id="navcol-1">
+        <div class="container"><a class="navbar-brand logo" id="dtu_logo" href="#"></a><button data-toggle="collapse"
+                class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span
+                    class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="index.html">HOME</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="dtuconnect.html">DTU CONNECT</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="dtuconnect.html">DTU CONNECT</a>
+                    </li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="about-us.html">ABOUT US</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="our-team.html">OUR TEAM</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="contact-us.html">CONTACT US</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="downloads.html">DOWNLOADS</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="contact-us.html">CONTACT US</a>
+                    </li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="downloads.html">DOWNLOADS</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
     <main class="page landing-page">
-        <section class="clean-block clean-hero" style="background-image: url(&quot;assets/img/IMG_20170821_111806495.jpg&quot;);color: rgba(9, 162, 255, 0.85);background-position: 0% 25%;">
+        <section class="clean-block clean-hero"
+            style="background-image: url(&quot;assets/img/IMG_20170821_111806495.jpg&quot;);color: rgba(9, 162, 255, 0.85);background-position: 0% 25%;">
             <div class="text">
                 <h2 id="hero-heading">Welcome to the IPR Cell</h2>
-                <p id="hero-subtext">The official website of Intellectual Property Rights Cell, Delhi Technological University</p><a id="custom_button" class="btn btn-outline-light btn-lg" href="about-us.html">Learn More</a></div>
+                <p id="hero-subtext">The official website of Intellectual Property Rights Cell, Delhi Technological
+                    University</p><a id="custom_button" class="btn btn-outline-light btn-lg" href="about-us.html">Learn
+                    More</a>
+            </div>
         </section>
         <section class="clean-block clean-info dark">
             <div class="container">
@@ -54,12 +65,29 @@
                     <h2 class="text-info responsive_heading">Message from Coordinator</h2>
                 </div>
                 <div class="row align-items-center">
-                    <div class="col-md-6"><img class="img-thumbnail img-fluid" src="assets/img/29027410_2150205678541454_2123960331163140096_n.jpg"></div>
+                    <div class="col-md-6"><img class="img-thumbnail img-fluid"
+                            src="assets/img/29027410_2150205678541454_2123960331163140096_n.jpg"></div>
                     <div class="col-md-6">
                         <div class="getting-started-info">
-                            <p class="responsive_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis lacus leo, euismod quis nunc eget, vestibulum auctor nisl. Mauris volutpat id urna a tempor. Quisque tempus, risus malesuada vehicula venenatis, lacus lectus malesuada
-                                lorem, vitae interdum massa sapien vitae eros. Sed eleifend maximus ante, non tristique sem volutpat nec. Praesent ut tincidunt turpis, id venenatis lorem. Etiam vel sem quis nunc egestas hendrerit sit amet eget lorem.
-                                Aenean in pellentesque ipsum, a tincidunt urna. Maecenas vitae justo et dolor elementum vulputate. Nam interdum sagittis nulla a sagittis.<br></p>
+                            <p class="responsive_para">Delhi technological university has been an epitome of quality
+                                education with a mission of developing exceptional quality technocrats over a vast
+                                period. Delhi Technological University has a glorious past of 78 long years and has
+                                produced many outstanding academicians. The programs here have been designed to instill
+                                in the minds of young engineers and inculcate spirits of innovation, leadership &
+                                teamwork. We have been using cutting edge technologies for enhancing teaching & we have
+                                been following a pragmatic approach in our teaching pedagogy.
+                                To encourage innovation, DTU has established Intellectual Property Rights (IPR) Cell,
+                                that works closely under the Industrial R&D unit, to ensure the protection of claims of
+                                the Inventor(s) of DTU, i.e. faculty/students/supporting staff/project staff/visitors of
+                                DTU through the choice of intellectual property protection on a unique work, ideas,
+                                inventions, products, technology or to keep it open for public domain, whichever they
+                                find appropriate.<br></p>
+                            <p style="text-align: left; font-weight:bold;">
+                                Dr Madan Mohan Tripathi<br>
+                                Coordinator, IPR Cell<br>
+                                Delhi Technological University
+                            </p>
+
                         </div>
                     </div>
                 </div>
@@ -68,27 +96,11 @@
         <section class="clean-block features">
             <div class="container">
                 <div class="block-heading">
-                    <h2 class="text-info responsive_heading">About Us</h2>
-                    <p class="responsive_para">The IPR Cell, DTU is the administrative body of DTU to manage and administer all IPR related activities</p>
+                    <h2 class="text-info">About Us</h2>
+                    <p class="responsive_para">The IPR Cell, DTU is the administrative body of DTU to manage and
+                        administer all IPR related activities</p>
                 </div>
-                <div class="row justify-content-center">
-                    <div class="d-none col-md-5 feature-box"><i class="icon-star icon"></i>
-                        <h4>Point 1</h4>
-                        <p class="responsive_para" style="font-size: 15px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
-                    </div>
-                    <div class="d-none col-md-5 feature-box"><i class="icon-pencil icon"></i>
-                        <h4>Point 2</h4>
-                        <p class="responsive_para" style="font-size: 15px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
-                    </div>
-                    <div class="d-none col-md-5 feature-box"><i class="icon-screen-smartphone icon"></i>
-                        <h4>Point 3</h4>
-                        <p class="responsive_para" style="font-size: 15px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
-                    </div>
-                    <div class="d-none col-md-5 feature-box"><i class="icon-refresh icon"></i>
-                        <h4>Point 4</h4>
-                        <p class="responsive_para" style="font-size: 15px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
-                    </div>
-                </div><a class="btn btn-primary btn-lg button_center" href="about-us.html">Learn More</a></div>
+            </div><a class="btn btn-primary btn-lg button_center" href="about-us.html">Learn More</a></div>
         </section>
         <section class="clean-block features">
             <div class="container">
@@ -110,7 +122,8 @@
                         <p>Connect with the alumni who are one of the best in their domains</p>
                     </div>
                 </div>
-            </div><a class="btn btn-primary btn-lg button_center" href="dtuconnect.html">Learn More</a></section>
+            </div><a class="btn btn-primary btn-lg button_center" href="dtuconnect.html">Learn More</a>
+        </section>
         <section class="clean-block features">
             <div class="container">
                 <div class="block-heading" style="padding-top: 0px;">
@@ -126,24 +139,33 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td class="text-center responsive_para"><a class="no_decoration" href="http://www.dtu.ac.in/Web/Departments/Electrical/faculty/mmtripathi.php" target="_blank">Prof. MM Tripathi</a></td>
+                                <td class="text-center responsive_para"><a class="no_decoration"
+                                        href="http://www.dtu.ac.in/Web/Departments/Electrical/faculty/mmtripathi.php"
+                                        target="_blank">Prof. MM Tripathi</a></td>
                                 <td class="text-center responsive_para">Coordinator, IPR Cell</td>
                             </tr>
                             <tr>
-                                <td class="text-center responsive_para"><a class="no_decoration" href="http://www.dtu.ac.in/Web/Departments/AppliedChemistry/faculty/ramsingh.php" target="_blank">Dr Ram Singh</a></td>
+                                <td class="text-center responsive_para"><a class="no_decoration"
+                                        href="http://www.dtu.ac.in/Web/Departments/AppliedChemistry/faculty/ramsingh.php"
+                                        target="_blank">Dr Ram Singh</a></td>
                                 <td class="text-center responsive_para">Co-coordinator, IPR Cell</td>
                             </tr>
                             <tr>
-                                <td class="text-center responsive_para"><a class="no_decoration" href="http://www.dtu.ac.in/Web/Departments/AppliedChemistry/faculty/rolipurwar.php" target="_blank">Dr Roli Purwar</a></td>
+                                <td class="text-center responsive_para"><a class="no_decoration"
+                                        href="http://www.dtu.ac.in/Web/Departments/AppliedChemistry/faculty/rolipurwar.php"
+                                        target="_blank">Dr Roli Purwar</a></td>
                                 <td class="text-center responsive_para">Co-coordinator, IPR Cell</td>
                             </tr>
                             <tr>
-                                <td class="text-center responsive_para"><a class="no_decoration" href="http://www.dtu.ac.in/Web/Departments/Electrical/faculty/anup.php" target="_blank">Dr Anup Mandpura</a></td>
+                                <td class="text-center responsive_para"><a class="no_decoration"
+                                        href="http://www.dtu.ac.in/Web/Departments/Electrical/faculty/anup.php"
+                                        target="_blank">Dr Anup Mandpura</a></td>
                                 <td class="text-center responsive_para">Co-coordinator, IPR Cell</td>
                             </tr>
                         </tbody>
                     </table>
-                </div><a class="btn btn-primary btn-lg button_center" href="our-team.html">Learn More</a></div>
+                </div><a class="btn btn-primary btn-lg button_center" href="our-team.html">Learn More</a>
+            </div>
         </section>
     </main>
     <footer class="page-footer dark" style="height: 0px;padding-top: 0px;">
