Message from coordinator done

--- a/index.html
+++ b/index.html
@@ -69,13 +69,11 @@
                             src="assets/img/29027410_2150205678541454_2123960331163140096_n.jpg"></div>
                     <div class="col-md-6">
                         <div class="getting-started-info">
-                            <p class="responsive_para">Delhi technological university has been an epitome of quality
-                                education with a mission of developing exceptional quality technocrats over a vast
-                                period. Delhi Technological University has a glorious past of 78 long years and has
-                                produced many outstanding academicians. The programs here have been designed to instill
-                                in the minds of young engineers and inculcate spirits of innovation, leadership &
-                                teamwork. We have been using cutting edge technologies for enhancing teaching & we have
-                                been following a pragmatic approach in our teaching pedagogy.
+                            <p class="responsive_para">Delhi Technological University (DTU), Delhi has emerged as one
+                                the premier Technological institutions of our great country. DTU provides with state of
+                                the art facilities, world class education, training, research and consultancy in the
+                                arena of Science, Engineering, Technology, and Management. DTU has been an epitome of
+                                quality education with a mission of developing exceptional quality technocrats.
                                 To encourage innovation, DTU has established Intellectual Property Rights (IPR) Cell,
                                 that works closely under the Industrial R&D unit, to ensure the protection of claims of
                                 the Inventor(s) of DTU, i.e. faculty/students/supporting staff/project staff/visitors of
