DTU connect link added

--- a/dtuconnect.html
+++ b/dtuconnect.html
@@ -81,7 +81,7 @@
                 </div>
                 <div class="block-heading" style="margin-bottom: 0px;">
                     <h4 class="text-info responsive_heading" style="margin-bottom: 0px;font-size: 30px;"><a
-                            id="custom_btn" class="btn btn-primary btn-lg" href="javascript:void(0);">Go to DTU Connect
+                            id="custom_btn" class="btn btn-primary btn-lg" href="http://dtuconnect.ecelldtu.in/">Go to DTU Connect
                             &gt;&gt;</a></h4>
                 </div>
             </div>
